# llm-api

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  Dockerfile.build  README.md  gunicorn.conf.py  main.py  pyproject.toml
.github/: renovate.json
.github/workflows/: build.yml  dependabot.yml  main.yml  warmer.yml
server/: __init__.py  app.py  config.py
server/api/: health.py
server/api/v1/: __init__.py  benchmark.py  chat.py  generate.py  health.py  ner.py
server/features/: llm.py
server/features/chat/: __init__.py  model.py  protocol.py  stub.py
server/features/ner/: __init__.py  model.py  protocol.py
server/lifespans/: __init__.py  chat_model.py  consul_register.py  load_model.py  ner_model.py
server/middlewares/: logging.py
server/plugins/: consul.py
server/schemas/v1/: __init__.py  answer.py  benchmark.py  entities.py  generate.py  query.py
server/telemetry/: meter_provider.py
server/typedefs/: __init__.py  event.py  message.py  state.py
server/types/: __init__.py  benchmark.py
server/typings/ctranslate2/: __init__.pyi
server/typings/transformers/models/llama/: __init__.pyi
server/utils/: __init__.py  persistent_connection.py
