[project]
name = "llm-api"
version = "0.1.0"
description = "A fast CPU-based API for LLMs"
requires-python = "~=3.13"
dependencies = [
    "ctranslate2>=4.6.0",
    "granian>=2.4.1",
    "jinja2>=3.1.6",
    "litestar>=2.16.0",
    "msgspec>=0.19.0",
    "pydantic-settings>=2.10.1",
    "transformers>=4.53.1",
    "uvloop>=0.21.0",
    "picologging>=0.9.3; python_version < '3.13'",
    "prometheus-client>=0.22.1",
    "aiohttp>=3.12.13",
]

[dependency-groups]
dev = ["nodejs-wheel-binaries>=22.17.0", "pyright>=1.1.402", "ruff>=0.12.2"]

[project.scripts]
llm-api = "server:main"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "Q", "TC", "ANN001", "PLC0414", "INP001", "S104", "PYI001", "COM812"]

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
stubPath = "server/typings"
typeCheckingMode = "strict"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportMissingTypeStubs = false
reportPrivateUsage = false
